Test: CI deployment with all fixes
- Test git commit skip in CI
- Test manifest upload with correct version (0.2.0) and Type tag
- Test no wallet exposure in manifest

--- a/apps/arcade/index.html
+++ b/apps/arcade/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🕹️ Neon Arcade - Retro Gaming Paradise (Fixed!)</title>
+    <title>🕹️ Neon Arcade - Retro Gaming Paradise (CI Test!)</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
