Minor change on arcade index to test incremental updates

--- a/apps/arcade/index.html
+++ b/apps/arcade/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🕹️ Neon Arcade - Ultimate Retro Gaming Experience</title>
+    <title>🕹️ Neon Arcade - Freakin' Ultimate Retro Gaming Experience</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
             <h1 class="neon-title">
                 <span class="flicker">🕹️</span> NEON ARCADE <span class="flicker">🕹️</span>
             </h1>
-            <p class="subtitle">YOUR ULTIMATE RETRO GAMING EXPERIENCE</p>
+            <p class="subtitle">YOUR FREAKIN' ULTIMATE RETRO GAMING EXPERIENCE</p>
             <p class="welcome-message">Step into the future of the past! Experience classic arcade games with modern neon aesthetics and cutting-edge gameplay.</p>
             <div class="year-badge">EST. 1985 • REBORN 2024</div>
         </header>
