Minor change on snek game for incremental teest

--- a/apps/arcade/snake.html
+++ b/apps/arcade/snake.html
@@ -334,7 +334,7 @@
     <div class="container">
         <header class="game-header">
             <h1 class="neon-title">
-                <span class="flicker">🐍</span> SNAKE CLASSIC <span class="flicker">🐍</span>
+                <span class="flicker">🐍</span> SNEK CLASSIC <span class="flicker">🐍</span>
             </h1>
             <p class="subtitle">RETRO GAMING PARADISE</p>
         </header>
@@ -342,7 +342,7 @@
         <div class="game-container">
             <div class="snake-game-container">
                 <div class="snake-game-header">
-                    <h2 class="snake-title">🐍 SNAKE CLASSIC 🐍</h2>
+                    <h2 class="snake-title">🐍 SNEK CLASSIC 🐍</h2>
                     <div class="snake-score">Score: <span id="current-score">0</span> | High: <span id="high-score">0</span></div>
                 </div>
                 <canvas id="snakeCanvas" width="400" height="400"></canvas>
@@ -567,7 +567,7 @@
             gameContainer.innerHTML = `
                 <div class="snake-game-container">
                     <div class="snake-game-header">
-                        <h2 class="snake-title">🐍 SNAKE CLASSIC 🐍</h2>
+                        <h2 class="snake-title">🐍 SNEK CLASSIC 🐍</h2>
                         <div class="snake-score">Score: <span id="current-score">0</span> | High: <span id="high-score">${snakeHighScore}</span></div>
                     </div>
                     <canvas id="snakeCanvas" width="400" height="400"></canvas>
