Leanify the repo

--- a/apps/hello-anthony/index.html
+++ b/apps/hello-anthony/index.html
@@ -24,15 +24,12 @@
     <meta property="og:site_name" content="Hello Anthony">
     <meta property="og:locale" content="en_US">
     
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://hello-anthony.arweave.dev/">
-    <meta name="twitter:title" content="Hello Anthony! 👋 | Special Greeting">
-    <meta name="twitter:description" content="A special interactive greeting page for Anthony! Features beautiful animations, fireworks, and personalized messages. Hope you're having an amazing day! 🌟✨">
-    <meta name="twitter:image" content="https://hello-anthony.arweave.dev/social-preview.png">
-    <meta name="twitter:image:alt" content="Hello Anthony! Interactive greeting with colorful animations and fireworks">
-    <meta name="twitter:creator" content="@helloanthony">
-    <meta name="twitter:site" content="@helloanthony">
+    <!-- Social Media -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://hello-anthony.arweave.dev/">
+    <meta property="og:title" content="Hello Anthony! 👋 | Special Greeting">
+    <meta property="og:description" content="A special interactive greeting page for Anthony! Features beautiful animations, fireworks, and personalized messages. Hope you're having an amazing day! 🌟✨">
+    <meta property="og:image" content="https://hello-anthony.arweave.dev/social-preview.png">
     
     <!-- LinkedIn -->
     <meta property="linkedin:title" content="Hello Anthony! 👋 | Special Greeting">
