--- a/apps/recipe-cookbook/index.html
+++ b/apps/recipe-cookbook/index.html
@@ -400,7 +400,7 @@
                 <span id="themeIcon"></span>
             </button>
             <h1>Recipe Cookbook</h1>
-            <p>Discover delicious recipes for every occasion</p>
+            <p>Discover mmmmmm delicious recipes for every occasion</p>
         </div>
 
         <div class="cookbook-nav">
