--- a/apps/arcade/snake.html
+++ b/apps/arcade/snake.html
@@ -161,6 +161,16 @@
             text-shadow: 0 0 20px var(--neon-green);
             font-size: 1.5rem;
             margin-bottom: 0.5rem;
+            animation: snakeGlow 2s ease-in-out infinite alternate;
+        }
+
+        @keyframes snakeGlow {
+            from { 
+                text-shadow: 0 0 20px var(--neon-green);
+            }
+            to { 
+                text-shadow: 0 0 30px var(--neon-green), 0 0 40px var(--neon-blue);
+            }
         }
 
         .snake-score {
