--- a/apps/recipe-cookbook/index.html
+++ b/apps/recipe-cookbook/index.html
@@ -428,7 +428,7 @@
                 prepTime: '20 minutes',
                 cookTime: '50 minutes',
                 totalTime: '1 hour 10 minutes',
-                image: './meatloaf.jpg',
+                image: './images/meatloaf.jpg',
                 ingredients: [
                     '1 lb ground turkey (93% lean preferred)',
                     '8 oz mushrooms (white or cremini), finely chopped',
